# PhysicsAnalysis_Analysis

./: ILCSoft.cmake  README.md  init_ilcsoft.sh
AnalysisProcessor/: CMakeLists.txt
AnalysisProcessor/include/: .Variables.h.swp  AnalysisProcessor.h  IsolatedLeptonPfoAnalysis.h  JetAnalysis.h  MCAnalysis.h  PartialJetAnalysis.h  PfoAnalysis.h  RawPfoAnalysis.h  Variables.h
AnalysisProcessor/src/: .tmp.txt.swp  AnalysisProcessor.cc  IsolatedLeptonPfoAnalysis.cc  JetAnalysis.cc  MCAnalysis.cc  PartialJetAnalysis.cc  PfoAnalysis.cc  RawPfoAnalysis.cc  Variables.cc
AnalysisScripts/: CMakeLists.txt
AnalysisScripts/include/: BuildDistributions.h  BuildIndividualDistributions.h  ConcatenateWeights.h  CouplingAnalysis.h  EventNumbers.h  Fit.h  MakeDerivedPlots.h  MakePlots.h  MakeSimplePlots.h  NuisanceFit.h  PostMVASelection.h  PreSelection.h  Process.h  TMVAClassificationApplication.h  TMVAClassificationApplication3000.h  TMVAClassifier.h  TMVAClassifier3000.h  Variables.h  WeightToXmlConverter.h
AnalysisScripts/src/: .Fit.cc.swp  Analysis.cxx  Analysis3000.cxx  BuildDistributions.cc  BuildIndividualDistributions.cc  ConcatenateWeightFiles.cxx  ConcatenateWeights.cc  CouplingAnalysis.cc  EventNumbers.cc  Fit.cc  Fitting.cxx  Fitting3000.cxx  MakeDerivedPlots.cc  MakePlots.cc  MakeSimplePlots.cc  NuisanceFit.cc  PerfectAnalysis.cxx  PerfectAnalysis3000.cxx  PostMVASelection.cc  PreSelection.cc  Process.cc  TMVAClassificationApplication.cxx  TMVAClassificationApplication3000.cxx  TMVAClassifier.cxx  TMVAClassifier3000.cxx  Variables.cc  WeightToXmlConverter.cxx
Colours/: ConvertToCode.py  RGB.txt
FlavourTagging/Training/MarlinJobs/: MarlinSubmit.py  MarlinSubmitCLICSamples.py
FlavourTagging/Training/TMVATraining/: MergeFlavourTaggingSamples.py  RunTrainingFlavourTaggingTMVA2Jets.py  createAndUploadLcfiweights.sh
Init/: ILCSoft.cmake  init_ilcsoft.sh
JetsToPFOProcessor/: CMakeLists.txt  createAndUploadMarlinLib.sh
JetsToPFOProcessor/doc/.svn/: all-wcprops  entries
JetsToPFOProcessor/include/: JetsToPFOProcessor.h
JetsToPFOProcessor/lib/: libJetsToPFOs.so.0.1  libJetsToPFOs.so.0.1.0
JetsToPFOProcessor/src/: JetsToPFOProcessor.cc
MarlinJobs/: MarlinSubmit.py  MarlinSubmitCLICSamples.py
MarlinJobs/DiracDownloads/: Download.py  DownloadCLICSamples.py  DownloadCLICSamples2.py  DownloadCLICSamples3.py  DownloadCLICSamples4.py  DownloadCLICSamplesThreaded.py  DownloadCLICSamplesThreaded2.py  DownloadThreaded.py  DownloadThreaded2.py  createFoldersNew.py
MarlinJobs/Logic/: GridTools.py  GridTools.pyo  TemplateWriterTools.py  TemplateWriterTools.pyo  ThreadedTools.py  ThreadedTools.pyo  __init__.pyo
MarlinJobs/TemplateSteering/: AnalysisTemplate.xml  AnalysisTemplateWriterHelper.py  AnalysisTemplate_Tag4.xml  AnalysisTemplate_Tag9.xml  WriteXmlHelper.py
MarlinJobs/Testing/: DetModel_clic_ild_cdr_RecoVar_clic_ild_cdr_ggHadBkg_ee_nunuww_nunuqqqq_1400GeV_GenNumber_001_100_0_Analysis_1_Loose.root  DetModel_clic_ild_cdr_RecoVar_clic_ild_cdr_ggHadBkg_ee_nunuww_nunuqqqq_1400GeV_GenNumber_001_100_0_Analysis_1_Selected.root  DetModel_clic_ild_cdr_RecoVar_clic_ild_cdr_ggHadBkg_ee_nunuww_nunuqqqq_1400GeV_GenNumber_001_100_0_Analysis_1_Tight.root
MarlinSteering/Testing/: GeneratorAnalysis.root  TestProcessor.xml  TestProcessor2.xml  tmp.txt
MarlinSteering/TestingFastJet/: Testing.root  TestingFastJet.xml  tmp.txt  tmp2.txt
SelectionProcessor/: ILCSoft.cmake  createAndUploadMarlinLib.sh  init_gcc48.sh  init_gcc48_ilcsoft.sh  init_ilcsoft.sh
SelectionProcessor/include/: .MCAnalysis.h.swp  JetAnalysis.h  MCAnalysis.h  SelectionProcessor.h  Variables.h
SelectionProcessor/src/: JetAnalysis.cc  MCAnalysis.cc  SelectionProcessor.cc  Variables.cc
WhizardWeighting/: CMakeLists.txt
WhizardWeighting/include/: CouplingAnalysis.h
WhizardWeighting/src/: CouplingAnalysis.cc
WhizardWeightingMarlin/: CMakeLists.txt
WhizardWeightingMarlin/include/: CouplingAnalysis.h  GeneratorProcessor.h
WhizardWeightingMarlin/src/: CouplingAnalysis.cc  GeneratorProcessor.cc
(+20 files in other folders)
